theme basic: small changes

--- a/theme basic.ftplugin/critic.less
+++ b/theme basic.ftplugin/critic.less
@@ -1,10 +1,18 @@
 /* == Critic markup ============================================================== */
+
+.cm-comment,
+.cm-highlight,
+.cm-del,
+.cm-ins,
+.cm-replace {
+    padding: 2px 0;
+}
+
 .cm-comment.cm-text {
     background-color: rgba(0, 55, 240, 0.07);
     // background-color: transparent;
     color: #999; //#666;
     font-style: italic;
-    padding: 2px 0;
 }
 .cm-comment.cm-keyword {
     color: gray; // #848BFF;
@@ -18,7 +26,6 @@
     font-style: normal;
 }
 .cm-highlight {
-    padding: 2px 0;
     background-color: rgba(250, 184, 0, 0.4)
 }
 .cm-highlight.cm-keyword {
