--- a/theme basic.ftplugin/base.less
+++ b/theme basic.ftplugin/base.less
@@ -10,7 +10,7 @@
  *  Variables
  * ************************************************************** */
 
-@font: Consolas, 'Courier Prime', Courier;
+@font: Seravek, Consolas, 'Courier Prime', Courier; // Seravek is on OS X 10.9
 @lineHeight: 1.2;
 @tabSize: "8";
 @selectionLeftFillTo: margin;
@@ -21,8 +21,10 @@
  *  General
  * ************************************************************** */
 
-.CodeMirror {
+body {
     -webkit-font-smoothing: subpixel-antialiased !important;
+    text-rendering: optimizeSpeed;
+    font-size: 1.05em;
 }
 
 .line-select-position {
@@ -56,7 +58,7 @@
  * ************************************************************** */
 
 .CodeMirror .cm-heading {
-    font-family: "Source Sans Pro"
+    font-family: Seravek, "Source Sans Pro", Helvetica;
 }
 
 .CodeMirror .cm-heading[cm-level="1"] {
