--- a/theme basic.ftplugin/fold.less
+++ b/theme basic.ftplugin/fold.less
@@ -1,18 +1,18 @@
 /* == Folds ==================================================== */
 
 .CodeMirror-widget .cm-fold {
-    opacity: 1;
-}
-.cm-foldedLine .CodeMirror-widget .cm-fold {
-    opacity: 1;
+    width: 19px;
+    height: 9px;
+    background-size: 19px 9px;
+    margin-bottom: 1px;
+    opacity: 1.0;
 }
 .CodeMirror .cm-foldedLine .cm-fold:hover {
-    opacity: 1;
+    opacity: 1.0;
 }
-
 .CodeMirror .cm-foldedLineBackground {
     background-size: 4px 1px;
-    opacity: 1; // 0.25;
+    opacity: 1.0;
     background-position: center center;
     width: 174px;
     margin: 0 auto;
