--- a/theme basic.ftplugin/tags.less
+++ b/theme basic.ftplugin/tags.less
@@ -1,4 +1,15 @@
-/* == Tags ==================================================================== */
+/* == Tags, etc ================================================================= */
+
+.leftBorder {
+    padding-left: 24px;
+    border-left: 5px solid #ccc;
+}
+
+.CodeMirror pre.cm-blockquote {
+    font-style: normal;
+    margin-left: 54px !important;
+    .leftBorder;
+}
 
 pre[cm-note] {
     color: gray; // #999;
