theme basic: small changes

--- a/theme basic.ftplugin/base.less
+++ b/theme basic.ftplugin/base.less
@@ -12,7 +12,7 @@
 
 @font: Seravek, 'Source Sans Pro', Consolas, 'Courier Prime', Courier; // Seravek is on OS X 10.9
 @lineHeight: 1.25;
-@tabSize: "8";
+@tabSize: '8';
 @selectionLeftFillTo: margin;
 @deskColor: #FEFCF6;
 @paperColor: @deskColor;
