--- a/toggle critic.ftplugin/style.less
+++ b/toggle critic.ftplugin/style.less
@@ -7,10 +7,10 @@
     line-height: 0;
     visibility: hidden;
 }
-.hide-critic .cm-del.cm-criticstart,
-.hide-critic .cm-del.cm-criticend,
-.cm-comment.cm-criticstart,
-.cm-comment.cm-criticend {  
+.hide-critic .CodeMirror .cm-del.cm-criticstart,
+.hide-critic .CodeMirror .cm-del.cm-criticend,
+.CodeMirror .cm-comment.cm-criticstart,
+.CodeMirror .cm-comment.cm-criticend {  
     width: auto;
     height: auto;
     display: inline;
