Changed wikilink match to RE

--- a/wikilink.ftplugin/style.less
+++ b/wikilink.ftplugin/style.less
@@ -1,9 +1,9 @@
-.cm-wikiLink.cm-keyword {
+.cm-wikilink.cm-keyword {
     color: #bbb;
     text-decoration: none;
     cursor: default;
 }
-.cm-wikiLink {
+.cm-wikilink {
     color: #555;
     text-decoration: underline;
     cursor: pointer;
