Removed some styling to work with FT build 722

--- a/theme basic.ftplugin/base.less
+++ b/theme basic.ftplugin/base.less
@@ -12,7 +12,7 @@
 
 @font: Seravek, 'Source Sans Pro', Consolas, 'Courier Prime', Courier; // Seravek is on OS X 10.9
 @lineHeight: 1.25;
-@tabSize: '8';
+@tabSize: 8;
 @selectionLeftFillTo: margin;
 @deskColor: #FEFCF6;
 @paperColor: @deskColor;
@@ -23,7 +23,7 @@
 
 body {
     -webkit-font-smoothing: subpixel-antialiased !important;
-    text-rendering: optimizeSpeed;
+    // text-rendering: optimizeSpeed; // this set in FoldingText default
     font-size: 1.05em;
 }
 
