Updated for FT build 723; custom block quote style

--- a/theme basic.ftplugin/base.less
+++ b/theme basic.ftplugin/base.less
@@ -10,7 +10,7 @@
  *  Variables
  * ************************************************************** */
 
-@font: Seravek, 'Source Sans Pro', Consolas, 'Courier Prime', Courier; // Seravek is on OS X 10.9
+@fontFamily: Seravek, 'Source Sans Pro', Consolas, 'Courier Prime', Courier; // Seravek is on OS X 10.9
 @lineHeight: 1.25;
 @tabSize: 8;
 @selectionLeftFillTo: margin;
@@ -73,11 +73,11 @@ body {
 .CodeMirror {
     .cm-heading[cm-level="1"] {
         font-size: 1.4em;
-        text-indent: -15.9pt !important;
+        // text-indent: -15.9pt !important;
     }
     .cm-heading[cm-level="2"] {
         font-size: 1.1em;
-        text-indent: -21pt !important;
+        // text-indent: -21pt !important;
     }
 }
 .cm-mode {
