--- a/theme basic.ftplugin/critic.less
+++ b/theme basic.ftplugin/critic.less
@@ -1,25 +1,25 @@
 /* == Critic markup ============================================================== */
 
-.cm-comment.cm-text {
+.cm-criticcomment.cm-text {
     background-color: rgba(0, 55, 240, 0.07);
-    // background-color: transparent;
     color: #999; //#666;
     font-style: italic;
 }
-.cm-comment.cm-keyword {
+.cm-criticcomment.cm-keyword {
     color: gray; // #848BFF;
     font-style: normal;
 }
 
-.cm-comment.cm-em {
+.cm-criticcomment.cm-em {
     font-weight: bold;
 }
-.cm-comment.cm-strong {
+.cm-criticcomment.cm-strong {
     font-style: normal;
 }
-.cm-highlight {
-    background-color: rgba(250, 184, 0, 0.4)
+.cm-critichighlight.cm-text {
+    background-color: rgba(250, 184, 0, 0.4);
+    color: #DE7D1A;
 }
-.cm-highlight.cm-keyword {
+.cm-critichighlight.cm-keyword {
     color: #A6784F;
 }
