--- a/theme basic.ftplugin/fold.less
+++ b/theme basic.ftplugin/fold.less
@@ -49,6 +49,7 @@
 .CodeMirror {
     .cm-foldedLine .cm-fold {
         background-image: url(images/foldLight.png);
+        background-color: transparent;
     }
     .cm-foldedLine .cm-fold:hover {
         background-image: url(images/foldDark.png);
